replace old "jirka..." urls with "hs-furtwangen"

--- a/Editor/Html/Help.html
+++ b/Editor/Html/Help.html
@@ -87,8 +87,8 @@
   </p>
   <p>
     This help-panel offers an introduction to the editor and how to work with it. For an introduction to the engine
-    visit the <a href="https://jirkadelloro.github.io/FUDGE/" target="_blank">start page</a> or the <a
-      href="https://github.com/JirkaDellOro/FUDGE/wiki" target="_blank">Wiki</a>.<br />
+    visit the <a href="https://hs-furtwangen.github.io/FUDGE/" target="_blank">start page</a> or the <a
+      href="https://github.com/hs-furtwangen/FUDGE/wiki" target="_blank">Wiki</a>.<br />
     Click on the headlines for details.
   </p>
 
