--- a/Editor/Examples/Sword/Sword.html
+++ b/Editor/Examples/Sword/Sword.html
@@ -12,8 +12,8 @@
 <!-- <script type="text/javascript" src="../../../Distribution/OimoPhysics.js"></script> -->
 
 <!--Load FUDGE. You may want to download local copies to work offline and be independent from future changes! Developers working on FUDGE itself may want to create symlinks-->
-<script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Distribution/FudgeCore.js"></script>
-<script type="text/javascript" src="https://jirkadelloro.github.io/FUDGE/Distribution/FudgeAid.js"></script>
+<script type="text/javascript" src="https://hs-furtwangen.github.io/FUDGE/Distribution/FudgeCore.js"></script>
+<script type="text/javascript" src="https://hs-furtwangen.github.io/FUDGE/Distribution/FudgeAid.js"></script>
 
 <!--Activate the following line to see renderings of physics components-->
 <!-- <script type="text/javascript">FudgeCore.Physics.settings.debugDraw = true;</script> -->
