--- a/Test/Net/Client/index.html
+++ b/Test/Net/Client/index.html
@@ -6,8 +6,8 @@
   <meta settings='"server": "ws://localhost:8080", "login": "Test", "partner": "Test"'>
   <script src="../../../Distribution/FudgeCore.js"></script>
   <script src="../../../Distribution/FudgeClient.js"></script>
-  <!-- <script src="https://jirkadelloro.github.io/FUDGE/Distribution/FudgeCore.js"></script> -->
-  <!-- <script src="https://jirkadelloro.github.io/FUDGE/Distribution/FudgeClient.js"></script> -->
+  <!-- <script src="https://hs-furtwangen.github.io/FUDGE/Distribution/FudgeCore.js"></script> -->
+  <!-- <script src="https://hs-furtwangen.github.io/FUDGE/Distribution/FudgeClient.js"></script> -->
   <script src="Client.js" defer></script>
   <title>New Test Client</title>
   <link rel="stylesheet" href="style.css">
