--- a/Test/Physics/Phase2_BallRollingScene/Main.html
+++ b/Test/Physics/Phase2_BallRollingScene/Main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fudge and Physics - Default</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../../TestInstructions.css">
     <script src="../../../Distribution/OimoPhysics.js"></script>
     <script src="../../../Distribution/FudgeCore.js"></script>
