fix test sprite

--- a/Test/Sprite/AnimationSprite/index.html
+++ b/Test/Sprite/AnimationSprite/index.html
@@ -12,11 +12,11 @@
   <link type="resources" src="Internal.json" />
   <script src="Main.js" editor="true"></script>
 
-  <link rel="stylesheet" href="../TestInstructions.css" />
-  <link rel="stylesheet" href="../UI.css" />
-  <script src="../dialog-polyfill.min.js"></script>
-  <script src="../TestInstructions.js"></script>
-  <script src="../UI.js"></script>
+  <link rel="stylesheet" href="../../TestInstructions.css" />
+  <link rel="stylesheet" href="../../UI.css" />
+  <script src="../../dialog-polyfill.min.js"></script>
+  <script src="../../TestInstructions.js"></script>
+  <script src="../../UI.js"></script>
   
   <style>
     html,
