Included FudgeClient, fix #17

--- a/Editor/Html/Fudge.html
+++ b/Editor/Html/Fudge.html
@@ -33,6 +33,7 @@
   <script type="text/javascript" src="../../Distribution/FudgeCore.js"></script>
   <script type="text/javascript" src="../../Distribution/FudgeAid.js"></script>
   <script type="text/javascript" src="../../Distribution/FudgeUserInterface.js"></script>
+  <script type="text/javascript" src="../../Distribution/FudgeClient.js"></script>
   
   
   <!-- Editor -->
