--- a/Test/Animation/PlaymodesTriggerLabel/Test.html
+++ b/Test/Animation/PlaymodesTriggerLabel/Test.html
@@ -43,7 +43,7 @@
       Test: [
         "Animations manipulate properties of a mutable object according to a given input, mostly time, along cubic splines.",
         "The properties to manipulate are given as AnimationStructure and can be nested, the input and output values as a AnimationSequence of AnimationKeys.",
-        "They are combined as Animation and can be controlled by a ComponentAnimator to manipulate the other components of its container.",
+        "They are combined as Animation and can be controlled by a ComponentAnimation to manipulate the other components of its container.",
         "Additionally, event-triggers may be installed with an animation to fire events when the input value passes the trigger input.",
         "To help navigating within an animation, labels may be defined."
       ],
@@ -97,7 +97,7 @@
     </fieldset>
 
     <fieldset id="component">
-      <legend>ComponentAnimator</legend>
+      <legend>ComponentAnimation</legend>
       <select name="mode"></select> playmode</br>
       <select name="quantization"></select> quantization</br>
     </fieldset>
