--- a/Editor/Html/Fudge.html
+++ b/Editor/Html/Fudge.html
@@ -10,6 +10,7 @@
   <link type="text/css" rel="stylesheet" href="../GoldenLayout/goldenlayout-base.css" />
   <link type="text/css" rel="stylesheet" href="Base.css" />
   <link type="text/css" rel="stylesheet" href="Icons.css" />
+  <link type="text/css" rel="stylesheet" href="IconsUnicode.css" />
   <link type="text/css" rel="stylesheet" href="Animation.css" />
   <link type="text/css" rel="stylesheet" href="ParticleSystem.css" />
   <!-- Themes -->
@@ -72,17 +73,17 @@
       <label>label</label>
       <span>x</span>
       <span>y</span>
-      <span class="rowVector">translation</span>
-      <div key="translation">
+      <span class="row-vector">translation</span>
+      <div class="row-vector" key="translation">
         <fudge-stepper key="x"></fudge-stepper>
         <fudge-stepper key="y"></fudge-stepper>
       </div>
-      <span class="rowVector">scaling</span>
-      <div key="scaling">
+      <span class="row-vector">scaling</span>
+      <div class="row-vector" key="scaling">
         <fudge-stepper key="x"></fudge-stepper>
         <fudge-stepper key="y"></fudge-stepper>
       </div>
-      <span class="rowVector">rotation</span>
+      <span class="row-vector">rotation</span>
       <fudge-stepper key="rotation"></fudge-stepper>
     </custom-matrix3x3>
   </template>
@@ -97,20 +98,20 @@
       <span>x</span>
       <span>y</span>
       <span>z</span>
-      <span class="rowVector">translation</span>
-      <div key="translation">
+      <span class="row-vector">translation</span>
+      <div class="row-vector" key="translation">
         <fudge-stepper key="x"></fudge-stepper>
         <fudge-stepper key="y"></fudge-stepper>
         <fudge-stepper key="z"></fudge-stepper>
       </div>
-      <span class="rowVector">rotation</span>
-      <div key="rotation">
+      <span class="row-vector">rotation</span>
+      <div class="row-vector" key="rotation">
         <fudge-stepper key="x"></fudge-stepper>
         <fudge-stepper key="y"></fudge-stepper>
         <fudge-stepper key="z"></fudge-stepper>
       </div>
-      <span class="rowVector">scaling</span>
-      <div key="scaling">
+      <span class="row-vector">scaling</span>
+      <div class="row-vector" key="scaling">
         <fudge-stepper key="x"></fudge-stepper>
         <fudge-stepper key="y"></fudge-stepper>
         <fudge-stepper key="z"></fudge-stepper>
